--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/jQuery-last/js/lightbox.js"></script>
+    <script src="/js/lightbox.js"></script>
     <script src="js/all.js"></script>
     
 </body>
